# llmaz-dashboard

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
console/serve/: chatbot.py  serve.py
console/webui/: engine.py  webui.py  webui_finetune.py  webui_prompt.py  webui_serving.py
deploy/: Dockerfile
deploy/llmaz/: Chart.yaml  values.yaml
deploy/llmaz/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deploy/llmaz/templates/tests/: test-connection.yaml
llmaz/serves/: chatbot.py  serve.py
llmaz/webui/: engine.py  webui.py  webui_finetune.py  webui_prompt.py  webui_serving.py
llmboard/libs/: consts.py  models.py
llmboard/webui/: engine.py  webui.py  webui_chat.py  webui_market.py
llmchat/client/: inference_services.py  models.py
llmchat/webui/: engine.py  serving.py  webui.py  webui_serving.py
