[tool.poetry]
name = "llmaz"
version = "0.1.0"
description = "A LLMOps platform for users to build their own LLM from A to Z on Kubernetes."
authors = ["kerthcet <kerthcet@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "3.41.0"
llmlite = "0.0.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = [
    'tmp/',
    'example/',
]
