[tool.poetry]
name = "llmboard"
version = "0.0.1"
description = "ChatUI for LLMs on llmaz."
authors = ["InftyAI Community"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kubernetes = "^31.0.0"
gradio = "^5.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = [
    'tmp/',
    'example/',
]
